# Credit-scoring-fairness

./: .dockerignore  .gitignore  Dockerfile  README _update.md  README.md  credit_scoring_fairness.ipynb  fastapi_app.py  feedback.db  flask_app.py  mlflow.db  monitor_drift.py  pyproject.toml  requirements-app.txt  requirements.txt  requirements_backend.txt  retrain_pipeline.py  seed_demo.py  simulate_mlops_history.py  simulate_time_travel.py  start_services.py  streamlit_app.py
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0001-feature-contract.md  0002-no-silent-fill.md  0003-fairness-metrics.md
scripts/: monitor_drift.py  retrain_pipeline.py
src/credit_scoring/: __init__.py  __main__.py  cli.py  drift.py  explain.py  fairness.py  features.py  inference.py  retrain.py  retrain_eval.py  schema.py
src/credit_scoring/api/: __init__.py  app.py  schemas.py  state.py
src/credit_scoring/api/routers/: __init__.py  explain.py  feedback.py  predict.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cli.py  test_drift.py  test_explain.py  test_fairness.py  test_features.py  test_inference.py  test_metrics.py  test_retrain.py
